# WaveParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  premake5.lua
unit_tests/: CMakeLists.txt
unit_tests/example/: CMakeLists.txt  main.cpp
waveparser/: CMakeLists.txt
waveparser/include/: Buffer.h  Core.h  Utils.h  Version.h  WaveData.h  WaveLogger.h  WaveParser.h  id3_Frame.h  id3_FrameHandler.h  id3_Frames.h  id3_Tag.h
waveparser/include/frames/: id3_Frame.h  id3_Frame_COMM.h  id3_Frame_TDRC.h  id3_Frame_TIT2.h  id3_Frame_TPE1.h  id3_Frame_TXXX.h  id3_Frame_Text.h
waveparser/include/frames/v23/: id3_Frame_COMM.h  id3_Frame_TDRC.h  id3_Frame_TIT2.h  id3_Frame_TPE1.h  id3_Frame_TXXX.h  id3_Frame_Text.h
waveparser/include/utility/: Utils.h
waveparser/src/: Utils.cpp  WaveData.cpp  WaveParser.cpp  id3_FrameHandler.cpp
waveparser/src/frames/: id3_Frame_TXXX.cpp  id3_Frame_Text.cpp
waveparser/src/frames/v23/: id3_Frame_TXXX.cpp  id3_Frame_Text.cpp
waveparser/src/utility/: Utils.cpp
